# CS354R_Project1

./: .gitignore  Ball.h  BaseApplication.h  CMakeLists.txt  ComponentManager.h  EntityManager.h  EventManager.cpp  EventManager.h  GameObject.h  Makefile  Makefile.am  Makefile.in  OgreApp  README.md  TutorialApplication.cpp  TutorialApplication.h  config.status  libtool  ogre.cfg
.deps/: OgreApp-TutorialApplication.Po
autom4te.cache/: requests
include/ECS/: EventManager.h
include/Events/: EventSubscribers.h  Events.h
include/GameObjects/: Ball.h  GameObject.h
src/: Ball.cpp  Ball.h  BasicTutorial1.cpp  BasicTutorial1.h  EntityManager.h  EventManager.cpp  EventManager.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  SoundManager.cpp  SoundManager.h
src/ECS/: EntityManager.cpp  EventManager.cpp  EventManager.h
